Ajuste de propuesta inicial

--- a/nb/NPL_DescripcionActividad.ipynb
+++ b/nb/NPL_DescripcionActividad.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "Por: David Alonso Rueda Rodríguez - 20181395007 (daruedar@correo.udistrital.edu.co)\n",
     "\n",
+    "Por: Natalia Andrea Ramírez Pérez - 20181395007 (naramirezp@correo.udistrital.edu.co)\n",
+    "\n",
     "Tema: Propuesta de trabajo"
    ]
   },
@@ -18,7 +20,7 @@
    "source": [
     "#### Objetivo de la actividad:\n",
     "\n",
-    "Aplicar conceptos de Natural Processing Language para análisis de sentimientos sobre minería\n",
+    "Aplicar conceptos de Natural Language Processing para análisis de sentimientos sobre minería\n",
     "\n",
     "#### Fuente de datos:\n",
     "\n",
@@ -38,6 +40,7 @@
     "\n",
     "|Versión | Cambios|\n",
     "|:--|:--|\n",
+    "|1.1.0|Ajuste de propuesta, se agregan integrantes de la actividad.| \n",
     "|1.0.0|Preparación de propuesta.| "
    ]
   },
@@ -53,15 +56,21 @@
     "\n",
     "El objetivo de esta actividad es contrastar los sentimientos encontrados en las publicaciones realizadas en la red social de microblogging Twitter por parte de las instituciones encargadas de promover e inspeccionar la actividad, y la actividad de las personas en los diferentes territorios.\n",
     "\n",
+    "Pregunta de investigación\n",
+    "\n",
+    "¿Cuál es el sentimiento de la población en Colombia frente a la minería?\n",
+    "\n",
+    "\n",
     "### 1.1 Objetivo General\n",
     "\n",
-    "Aplicar conceptos de Natural Processing Language para análisis de sentimientos sobre minería\n",
+    "Aplicar conceptos de Natural Language Processing para análisis de sentimientos sobre minería\n",
     "\n",
-    "### 1.2 Objetivo General\n",
+    "### 1.2 Objetivos Específicos\n",
     "\n",
     "- Caracterizar los sentimientos generales de los tweets en el Colombia con respecto a la actividad.\n",
     "- Identificar los términos más asociados con la actividad de interés.\n",
-    "- Identificar los principales centros de distribución de tweets positivos, negativos y neutros sobre la actividad."
+    "- Identificar los principales centros de distribución de tweets positivos, negativos y neutros sobre la actividad.\n",
+    "- Caracterizar a los productores de mensajes (emisores, receptores)"
    ]
   },
   {
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +94,26 @@
     "    'Cdmb': '@CARCDMB',\n",
     "    'ACM':'@acmineriacol',    \n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Supuestos iniciales\n",
+    "\n",
+    "Se espera que la mayoría de términos estén relacionados con temas negativos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listado_palabras = ['mercurio', 'cianuro', 'enfermedad', 'minería ilegal',\n",
+    "                    'minería legal', 'desarrollo sostenible'\n",
+    "                ]"
    ]
   },
   {
@@ -117,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
