Ajuste de propuesta inicial

--- a/nb/NPL_DescripcionActividad.ipynb
+++ b/nb/NPL_DescripcionActividad.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "#### Fuente de datos:\n",
     "\n",
-    "Se utilizarán datos extraidos desde la red social de Twitter en donde se revisarán cuentas oficiales del gobierno colombiano y ubicación de los ciudadanos el país.\n",
+    "Se utilizarán datos extraidos desde redes sociales (Twitter, Instagram, Facebook) y medios masivos de comunicación (periódicos, diarios).\n",
     "\n",
     "#### Temas trabajados\n",
     "\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
