Se mejora redacción de texto y se incluyen librerías para NPL, se incluye bibliografia

--- a/nb/NPL_DescripcionActividad.ipynb
+++ b/nb/NPL_DescripcionActividad.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Por: David Alonso Rueda Rodríguez - 20181395007 (daruedar@correo.udistrital.edu.co)\n",
     "\n",
-    "Por: Natalia Andrea Ramírez Pérez - 20181395007 (naramirezp@correo.udistrital.edu.co)\n",
+    "Por: Natalia Andrea Ramírez Pérez - 20181195009 (naramirezp@correo.udistrital.edu.co)\n",
     "\n",
     "Tema: Propuesta de trabajo"
    ]
@@ -54,11 +54,7 @@
     "\n",
     "En Colombia la tradición minera se extiende hasta la colonia, tema documentado en el libro ¿Cuál locomotora minera? El desalentador panorama de la minería en Colombia, escrito por Alvaro Ponce en 2014, en donde se menciona la existencia de minería en el Páramo de Santurban y en otras áreas.\n",
     "\n",
-    "El objetivo de esta actividad es contrastar los sentimientos encontrados en las publicaciones realizadas en la red social de microblogging Twitter por parte de las instituciones encargadas de promover e inspeccionar la actividad, y la actividad de las personas en los diferentes territorios.\n",
-    "\n",
-    "Pregunta de investigación\n",
-    "\n",
-    "¿Cuál es el sentimiento de la población en Colombia frente a la minería?\n",
+    "El objetivo de esta actividad es contrastar los sentimientos encontrados en las publicaciones realizadas en redes sociales y medios de comunicación sobre la Minería, dado este planteamiento la pregunta de investigación a tratar es la siguiente: ¿Cuál es el sentimiento de la población en Colombia frente a la minería?\n",
     "\n",
     "\n",
     "### 1.1 Objetivo General\n",
@@ -70,7 +66,15 @@
     "- Caracterizar los sentimientos generales de los tweets en el Colombia con respecto a la actividad.\n",
     "- Identificar los términos más asociados con la actividad de interés.\n",
     "- Identificar los principales centros de distribución de tweets positivos, negativos y neutros sobre la actividad.\n",
-    "- Caracterizar a los productores de mensajes (emisores, receptores)"
+    "- Caracterizar a los productores de mensajes (emisores, receptores)\n",
+    "\n",
+    "### 1.3 Palabras Clave\n",
+    "\n",
+    "- [NLP]()\n",
+    "- [Análisis de sentimientos](https://medium.com/analytics-vidhya/simplifying-social-media-sentiment-analysis-using-vader-in-python-f9e6ec6fc52f)\n",
+    "- [Redes neuronales convolucionales](- [Análisis de sentimientos](https://medium.com/analytics-vidhya/simplifying-social-media-sentiment-analysis-using-vader-in-python-f9e6ec6fc52f))\n",
+    "- [Python and NPL](https://likegeeks.com/es/tutorial-de-nlp-con-python-nltk/)\n",
+    "- [Redes convolucionales](http://ceur-ws.org/Vol-2172/p4_ittainnova_tass2018.pdf)"
    ]
   },
   {
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +130,17 @@
     "- import pandas as pd\n",
     "- import folium as fl\n",
     "- import seaborn as sns\n",
-    "- import TextBlob as tb\n"
+    "- import TextBlob as tb\n",
+    "- import spaCy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import textblob"
    ]
   }
  ],
