--- a/nb/NPL_DescripcionActividad.ipynb
+++ b/nb/NPL_DescripcionActividad.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Por: David Alonso Rueda Rodríguez - 20181395007 (daruedar@correo.udistrital.edu.co)\n",
     "\n",
-    "Por: Natalia Andrea Ramírez Pérez - 20181195009 (naramirezp@correo.udistrital.edu.co)\n",
+    "Por: Natalia Andrea Ramírez Pérez - 20181195009 (naraamirezp@correo.udistrital.edu.co)\n",
     "\n",
     "Tema: Propuesta de trabajo"
    ]
